--- a/demos/hello-world/index.html
+++ b/demos/hello-world/index.html
@@ -30,6 +30,7 @@
             alert('Bonjour ' + answer + ' !')
             //Afficher sur la console. print, echo, etc.
             console.log('Bonjour ' + answer + '!');
+            console.log('Bonjour ' + answer + '!');
         </script>
 
     </body>
