corrige les démos, ajoute du contexte, complete le readme, ajoute instructions pour utiliser le dépot, ajoute exercices module 2

--- a/demos/basics/basics1.html
+++ b/demos/basics/basics1.html
@@ -9,7 +9,14 @@
 
     <body>
 
-        <h1>Basics</h1>
+        <h1>Module 2 - Les bases de Javascript</h1>
+
+        <h2>Notions abordées</h2>
+
+        <p style="color: green">Déclarer et initialiser une variable (affectation) avec let, var et const, attacher une fonction à l'évènement de click d'un bouton (interaction avec la page HTML)</p>
+
+        <p style="color:red"> Penser à afficher la console dans votre navigateur, commenter/décommenter le code dans la
+            balise script pour tester votre compréhension</p>
 
         <!-- Programmation événementielle-->
         <button onclick="reactToClick()">Clique sur moi</button>
