publie les démos de la manip du dom

--- a/demos/hello-world/index.html
+++ b/demos/hello-world/index.html
@@ -2,37 +2,22 @@
 <html lang="en">
 
     <head>
-        <!-- Métadonnées !-->
-        <title>Hello World !</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hello world</title>
+
     </head>
 
     <body>
-        <header>
-            <nav>
-            </nav>
-            <h1>Hello world !</h1>
-        </header>
 
-        <main>
-            <section>
-                <h2>First section</h2>
-            </section>
-        </main>
-
-        <footer></footer>
+        <h1>Hello world</h1>
 
         <script>
-            // Emplacement du javascript
-            // alert('Hello world !');
-            //Déclarer une variable avec 'let' que l'on appelle answer
-            //on va stocker dedans le résultat de prompt
-            let answer = prompt('Comment tu t\'appelles ?');
-            alert('Bonjour ' + answer + ' !')
-            //Afficher sur la console. print, echo, etc.
-            console.log('Bonjour ' + answer + '!');
-            console.log('Bonjour ' + answer + '!');
+            //Ceci est un commentaire
+            //Inspecter la console du navigateur
+            //Le code javascript est placé dans la balise HTML script
+            console.log('Hello world !')
         </script>
-
     </body>
 
 </html>
