ajoute les refs a la demo

--- a/demos/0live/form/index.html
+++ b/demos/0live/form/index.html
@@ -108,6 +108,33 @@
         <input type="email" name="" id="">
         <input type="file" name="" id="">
 
+
+        <h2>Références</h2>
+
+        <p>Pour en savoir plus, consultez les pages de la MDN :</p>
+        <ul>
+            <li>
+                <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/input/text">Input text</a>
+            </li>
+            <li>
+                <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/input/radio">Input radio</a>
+            </li>
+            <li>
+                <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/input/checkbox">Input checkbox</a>
+            </li>
+            <li>
+                <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/select">Input select</a>
+
+            </li>
+            <li>
+                <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/input/range">Input range</a>
+            </li>
+            <li>
+                <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/form">Balise form</a>
+
+            </li>
+        </ul>
+
     </body>
 
 </html>
