publie les corrections d'exercices module 4

--- a/exercices/module-04/corrections/dark-light-modes/index.html
+++ b/exercices/module-04/corrections/dark-light-modes/index.html
@@ -54,10 +54,10 @@
             btn.addEventListener('click', function () {
                 if (document.body.classList.contains('light')) {
                     document.body.classList.replace('light', 'dark');
-                    btn.value = "Passer en light mode";
+                    btn.value = "Passer en Light mode";
                 } else {
                     document.body.classList.replace('dark', 'light');
-                    btn.value = "Passer en dark mode";
+                    btn.value = "Passer en Dark mode";
                 }
             });
         </script>
