wip publie correction ex0 precedence-associatitvité

--- a/exercices/module-02/corrections/exercice0.html
+++ b/exercices/module-02/corrections/exercice0.html
@@ -8,6 +8,11 @@
 </head>
 
 <style>
+
+    html{
+        width: 80%;
+        margin: auto;
+    }
     table {
         border-collapse: collapse;
         border: 2px solid rgb(140 140 140);
