--- a/exercices/module-02/corrections/exercice2.html
+++ b/exercices/module-02/corrections/exercice2.html
@@ -7,80 +7,58 @@
         <title>Document</title>
     </head>
 
+
     <body>
 
-        <h1>Exercice 2</h1>
+        <h1>Exercice 1</h1>
 
         <script>
 
-            const numbers = [1, 5, 32, 27, 12, -5, 100, -1.5, 230, 1250];
-            const letters = ['a', 'z', 'b', 'u', 'r', 'g'];
+            //1.
+            const tvaPourcent = 0.2;
+            //2.
+            let montantEnEurosHT;
+            //3. Une variable qui contient une valeur booléenne répond à une question
+            //Bonne pratique de la faire commencer par "is..."
+            let tvaEstApplicable;
 
-            //1. Une fonction qui retourne la somme des nombres
-
-            function sum(numbers) {
-                let sum = 0;
-                for (let number of numbers) {
-                    sum = sum + number;
-                    // sum += number (syntaxe alternative, plus compacte)
-                }
-                return sum;
-            }
-
-            console.log('Somme: ', sum(numbers));
-
-            //2. Calculer la moyenne des nombres
-            function average(numbers) {
-
-                //Pour garantir qu'il n'y ait pas de division par zéro !
-                //Si aucun élément dans le tableau, on annule le calcul (retourne)
-                if (numbers.length === 0) {
-                    return;
-                    //Lever une erreur
-                    // throw new Error();
-                }
-
-                //Moyenne = somme / nombre d'éléments
-                let total = sum(numbers);
-
-                return total / numbers.length;
-            }
-
-            console.log('Moyenne: ', numbers);
-            console.log('Moyenne: ', []);
-
-            //3. Valeurs min et max
-
-            // console.log('Min:', Math.max())
-
-            //Initialisation des valeurs min et max
-            let min = numbers[0];
-            let max = numbers[0];
-
-            for (let number of numbers) {
-
-                //On a trouvé un nombre plus petit que min,
-                //ça devient notre nouveau minimum
-                if (number < min) {
-                    min = number;
-                }
-
-                //On a trouvé un nombre plus grand que max,
-                //ça devient notre nouveau maximum
-                if (number > max) {
-                    max = number;
+            function calculeMontantTCC(montantEnEurosHT, tvaEstApplicable) {
+                if (tvaEstApplicable) {
+                    return montantEnEurosHT * (1 + tvaPourcent);
+                } else {
+                    return montantEnEurosHT;
                 }
             }
 
-            console.log('Min : ', min);
-            console.log('Max :' , max);
+            //1ere facture :
 
-            //Ou utiliser Maths.min() fournie par JS
-            console.log('Min : ', Maths.min(numbers));
-            console.log('Max : ', Maths.max(numbers));
+            montantEnEurosHT = 150.50;
+            tvaEstApplicable = false;
+            let montantTTCFacture1 = calculeMontantTCC(montantEnEurosHT, tvaEstApplicable);
 
+            //Retourne une représentation de la facture en chaîne de caractères
+            //formatée comme demandé (cf énoncé)
+            function formateFacture(numeroFacture, montantEnEurosHT, montantEnEurosTTC) {
 
-            // average([]); // Si aucun élément
+                //Corps de la fonction : ici on mettre les instructions
+                // let ligne1 = 'Facture ' + numeroFacture + ' '
+                //Une autre méthode : littéraux (avec les 'back ticks')
+                let ligne1 = `Facture ${numeroFacture}`;
+                let ligne2 = `Montant (HT): ${montantEnEurosHT} EUROS`;
+                let ligne3 = `Montant (TTC) : ${montantEnEurosTTC} EUROS`;
+
+                return `${ligne1}\n${ligne2}\n${ligne3}`;
+            }
+
+            //Appel de la fonction :
+            console.log(formateFacture(1, montantEnEurosHT, montantTTCFacture1));
+
+            //Facture 2
+            montantEnEurosHT = 1500.50;
+            tvaEstApplicable = true;
+            let montantTTCFacture2 = calculeMontantTCC(montantEnEurosHT, tvaEstApplicable);
+
+            console.log(formateFacture(2, montantEnEurosHT, montantTTCFacture1));
 
         </script>
 
