--- a/exercices/module-02/corrections/exercice3.html
+++ b/exercices/module-02/corrections/exercice3.html
@@ -9,66 +9,78 @@
 
     <body>
 
-        <h1>Exercice 3</h1>
-
+        <h1>Exercice 2</h1>
 
         <script>
 
-            // 1.
-            for (let i = 0; i < 11; i++) {
-                console.log(i);
+            const numbers = [1, 5, 32, 27, 12, -5, 100, -1.5, 230, 1250];
+            const letters = ['a', 'z', 'b', 'u', 'r', 'g'];
+
+            //1. Une fonction qui retourne la somme des nombres
+
+            function sum(numbers) {
+                let sum = 0;
+                for (let number of numbers) {
+                    sum = sum + number;
+                    // sum += number (syntaxe alternative, plus compacte)
+                }
+                return sum;
             }
 
-            let j = 0;
-            while (j < 11) {
-                console.log(j);
-                j++;
+            console.log('Somme: ', sum(numbers));
+
+            //2. Calculer la moyenne des nombres
+            function average(numbers) {
+
+                //Pour garantir qu'il n'y ait pas de division par zéro !
+                //Si aucun élément dans le tableau, on annule le calcul (retourne)
+                if (numbers.length === 0) {
+                    return;
+                    //Lever une erreur
+                    // throw new Error();
+                }
+
+                //Moyenne = somme / nombre d'éléments
+                let total = sum(numbers);
+
+                return total / numbers.length;
             }
 
-            // 2. 
+            console.log('Moyenne: ', numbers);
+            console.log('Moyenne: ', []);
 
-            for (let i = 0; i < 16; i = i + 2) {
-                console.log(i);
-            }
+            //3. Valeurs min et max
 
-            j = 0;
-            while (j < 16) {
-                console.log(j);
-                j = j + 2;
-            }
+            // console.log('Min:', Math.max())
 
-            // 3.
+            //Initialisation des valeurs min et max
+            let min = numbers[0];
+            let max = numbers[0];
 
-            for (let i = 1; i <= 256; i = i * 2) {
-                console.log(i);
-            }
+            for (let number of numbers) {
 
-            j = 1;
-            while (j <= 256) {
-                console.log(j);
-                j = j * 2;
-            }
+                //On a trouvé un nombre plus petit que min,
+                //ça devient notre nouveau minimum
+                if (number < min) {
+                    min = number;
+                }
 
-            // 4.
-            for (let i = 0; i < 8; i = i + 1) {
-                if (i % 2 == 0) {
-                    console.log(1);
-                } else {
-                    console.log(-1);
+                //On a trouvé un nombre plus grand que max,
+                //ça devient notre nouveau maximum
+                if (number > max) {
+                    max = number;
                 }
             }
 
-            j = 0;
-            while (j < 8) {
-                if (j % 2 == 0) {
-                    console.log(1);
-                } else {
-                    console.log(-1);
-                }
-                j++;
-            }
+            console.log('Min : ', min);
+            console.log('Max :' , max);
+
+            //Ou utiliser Maths.min() fournie par JS
+            console.log('Min : ', Maths.min(numbers));
+            console.log('Max : ', Maths.max(numbers));
 
 
+            // average([]); // Si aucun élément
 
         </script>
 
