--- a/exercices/module-02/corrections/exercice2.html
+++ b/exercices/module-02/corrections/exercice2.html
@@ -14,27 +14,27 @@
 
         <script>
 
+            //Remarque : normalement on écrira le code en anglais
+
             //1.
-            const tvaPourcent = 0.2;
+            const tvaPercent = 20; // Pour appliquer prix * (1 + tvaPercent/100)
+            //ou tvaCoeff = 0.2 // Pour appliquer prix * (1 + tvaCoeff)
             //2.
             let montantEnEurosHT;
             //3. Une variable qui contient une valeur booléenne répond à une question
             //Bonne pratique de la faire commencer par "is..."
             let tvaEstApplicable;
 
+            /**
+             * Retourne le montant TTC d'une facture en euros
+             */
             function calculeMontantTCC(montantEnEurosHT, tvaEstApplicable) {
                 if (tvaEstApplicable) {
-                    return montantEnEurosHT * (1 + tvaPourcent);
+                    return montantEnEurosHT * (1 + tvaPourcent / 100);
                 } else {
                     return montantEnEurosHT;
                 }
             }
-
-            //1ere facture :
-
-            montantEnEurosHT = 150.50;
-            tvaEstApplicable = false;
-            let montantTTCFacture1 = calculeMontantTCC(montantEnEurosHT, tvaEstApplicable);
 
             //Retourne une représentation de la facture en chaîne de caractères
             //formatée comme demandé (cf énoncé)
@@ -50,10 +50,16 @@
                 return `${ligne1}\n${ligne2}\n${ligne3}`;
             }
 
+            //1ere facture :
+
+            montantEnEurosHT = 150.50;
+            tvaEstApplicable = false;
+            let montantTTCFacture1 = calculeMontantTCC(montantEnEurosHT, tvaEstApplicable);
+
             //Appel de la fonction :
             console.log(formateFacture(1, montantEnEurosHT, montantTTCFacture1));
 
-            //Facture 2
+            //2eme facture :
             montantEnEurosHT = 1500.50;
             tvaEstApplicable = true;
             let montantTTCFacture2 = calculeMontantTCC(montantEnEurosHT, tvaEstApplicable);
