--- a/exercices/module-03/corrections/exercice1.html
+++ b/exercices/module-03/corrections/exercice1.html
@@ -30,7 +30,8 @@
                 this.courses = courses;
             }
 
-            let jane = new Student('John', 23, ['Biology', 'Computer Science']);
+            let john = new Student('John', 23, ['Biology', 'Computer Science']);
+            let jane = new Student('Jane', 25, ['Arts', 'Sociology', 'Computer Science']);
 
         </script>
 
