--- a/exercices/module-04/corrections/guess-my-number/index.html
+++ b/exercices/module-04/corrections/guess-my-number/index.html
@@ -113,7 +113,7 @@
 
             //Retourne un entier compris entre min (inclus) et max (exclus)
             function randomNumber(min, max) {
-                return min + Math.floor(Math.random() * max);
+                return min + Math.floor(Math.random() * (max-min));
             }
 
         </script>
