ajoute demo live sur page interactive (event), manipu du dom

--- a/demos/live/fonction-constructeur-student.html
+++ b/demos/live/fonction-constructeur-student.html
@@ -52,12 +52,12 @@
         //Appel de la fonction "constructeur"
         //new NomFonction(donnée, donnée) retourne un objet initialisé avec les valeurs
         let jane = new Student("Jane", "Doe", [12, 14, 18]);
-        //Afficher moyenne de Jane
-        console.log("Moyenne de Jane :", jane.mean())
-        let john = new Student("John", "Doe", [9, 11, 13]);
-        console.log("Moyenne de John :", john.mean())
-
         //Dernière question : créer une méthode pour calculer la moyenne des notes
+        //Afficher moyenne de Jane
+        console.log("Moyenne de Jane :", jane.mean());
+        let john = new Student("John", "Doe", [9, 11, 13]);
+        console.log("Moyenne de John :", john.mean());
+
 
     </script>
 </body>
